# youtube-learn

./: .env.example  .gitignore  Dockerfile  README.md  add_video_manual.py  cleanup_premieres.py  dashboard_server.py  debug_channel_id.py  debug_feed.py  debug_lib.py  debug_summary_manual.py  debug_transcript.py  debug_transcript_2.py  debug_transcript_3.py  debug_transcript_4.py  fix_state.py  init_db.py  list_models.py  main.py  manual_summary.py  monitor.py  pyproject.toml  rag_map.json  requirements.txt  run_background.sh  run_forever.sh  run_prod.sh  schedule_config.yaml  scheduler.py  simulate_test.py  sort_videos.py  stop_background.sh  temp_sub_G7D6s1YASwQ.live_chat.json  temp_sub_aFPl_BAEiaU.live_chat.json  temp_sub_udNzcTNUsT4.live_chat.json  test_premiere_logic.py  test_rag.py  test_rag_doc.txt  test_rag_v2.py  test_summarizer_direct.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  index.css
dashboard/src/components/: Dashboard.jsx  MindmapModal.jsx  SummaryPanel.jsx  VideoCard.jsx
dashboard/src/layouts/: MacWindow.jsx
tasks/: mindmap_generator.py  monitor_task.py  rag_service.py  summarizer.py  summarizer.py.bak  summarizer.py.bak2
